--- a/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
@@ -10,7 +10,7 @@ ol.icon-menu li {
     margin-top:0px;
     background-repeat:no-repeat;
     background-position:center 10px;
-    overflow:hide;
+    overflow:hidden;
     float:left;
 }
 
