--- a/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -1,6 +1,6 @@
 {% extends "maps/base.xhtml" %}{% load portal_misc %}
 
-{% block pagetitle %}Maps{% endblock %}
+{% block pagetitle %}<img src="{{ MEDIA_URL }}png/maps-bc.png" alt=""/> Maps{% endblock %}
 
 {% block content %}
 
