--- a/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -26,7 +26,9 @@
 <ul class="ml">
     <li><a href="{% url maps_nearby_list %}">Near Me</a></li>
 	<li>Near Somewhere</li>
-	<li>By Category</li>
+	<li>
+	    <a href="{% url maps_category_list %}">By Category</a>
+	</li>
 </ul>
 </div>
 
