--- a/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -28,18 +28,14 @@
 {% endif %}{% endfor %}
 </div>
 
-<div class="list-note">
     <div style="background-image:url('{% url osm_generated_map map_hash %}'); background-repeat:no-repeat; background-position: center center; height:240px"> </div>
-</div>
 
 {% if entities %}
-<div class="list-section">
-<ol class="ml">
+<ul class="ml">
 {% for entity in entities %}
-    <li><a href="{{ entity.get_absolute_url }}">{{ entity.title|linebreaksbr }}</a> {{ entity.distance.km|floatformat:3 }} km {{ entity.bearing }}</li>
+    <li><a href="{{ entity.get_absolute_url }}">{{ forloop.counter }}. {{ entity.title|linebreaksbr }}</a> {{ entity.distance.km|floatformat:3 }} km {{ entity.bearing }}</li>
 {% endfor %}
-</ol>
-</div>
+</ul>
 {% else %}
 <p>There isn't anything that close to you. Try <a href="{% url core_update_location %}?return_url={% url maps_nearby_detail entity_type.slug %}">updating your location</a> or widening your search.</p>
 {% endif %}
