Changes how maps are constructed. Fixed a bug in update_busstops when indicator and landmark are equal.

--- a/mobile_portal/mobile_portal/site-media/css/devices/apple_iphone.css
+++ b/mobile_portal/mobile_portal/site-media/css/devices/apple_iphone.css
@@ -16,6 +16,11 @@ ul.ml li, table.section-table tr {
 	padding-right: 10px;
 }
 
+ul.ml li.subitem {
+    background-color:#103157;
+    margin: auto auto auto 16px;
+}
+
 table.section-table {
     border-collapse:collapse;
     width:100%;
