--- a/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -28,12 +28,23 @@
 {% endif %}{% endfor %}
 </div>
 
-    <div style="background-image:url('{% url osm_generated_map map_hash %}'); background-repeat:no-repeat; background-position: center center; height:240px"> </div>
+    <div style="background-image:url('{% url osm_generated_map map_hash %}'); background-repeat:no-repeat; background-position: center center; height:320px"> </div>
 
 {% if entities %}
 <ul class="ml">
-{% for entity in entities %}
+{% for entity_group in entities %}
+{% ifequal entity_group|length 1 %}
+{% with entity_group.0 as entity %}
     <li><a href="{{ entity.get_absolute_url }}">{{ forloop.counter }}. {{ entity.title|linebreaksbr }}</a> {{ entity.distance.km|floatformat:3 }} km {{ entity.bearing }}</li>
+{% endwith %}
+{% else %}
+{% with entity_group.0 as entity %}
+    <li>{{ forloop.counter }}. <em>{{ entity_group|length }} {{ entity_type.verbose_name_plural }}</em> {{ entity.distance.km|floatformat:3 }} km {{ entity.bearing }}</li>
+{% endwith %}
+{% for entity in entity_group %}
+    <li class="subitem"><a href="{{ entity.get_absolute_url }}">{{ entity.title|linebreaksbr }}</a></li>
+{% endfor %}
+{% endifequal %}
 {% endfor %}
 </ul>
 {% else %}
