--- a/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -20,12 +20,7 @@
 
 <div class="list-section">
 <div class="list-note top">
-    Within:
-{% for distance in distances %}{% if entity %}
-    <a href="{% url maps_entity_nearby_detail_distance entity.entity_type.slug,entity.display_id,entity_type.slug distance.0 %}">{{ distance.1 }}</a>
-{% else %}
-    <a href="{% url maps_nearby_detail_distance entity_type.slug distance.0 %}">{{ distance.1 }}</a>
-{% endif %}{% endfor %}
+    Found {{ count }} {% ifequal count 1 %}{{ entity_type.verbose_name }}{% else %}{{ entity_type.verbose_name_plural }}{% endifequal %} 
 </div>
 
     <div style="background-image:url('{% url osm_generated_map map_hash %}'); background-repeat:no-repeat; background-position: center center; height:320px"> </div>
