--- a/mobile_portal/mobile_portal/templates/core/update_location.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/update_location.xhtml
@@ -43,7 +43,8 @@
 {% if return_url %}
         <input name="return_url" type="hidden" value="{{ return_url }}"/>
 {% endif %}
-        <input id="location" name="location" value="{{ location }}"/><input type="image" src="{{ MEDIA_URL }}png/icons/submit-arrow.png" alt="Submit"/>
+        <input id="location" name="location" value="{{ location }}"/>
+        <input type="submit" value="Update"/>
         
       </div>
     </div>
