--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -2,23 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
   <head>
 	
-	{# iPhone specific title to fit on home screen - code should perhaps be moved elsewhere? #}
-		<title>{% block title %}
-			{% if device|device_has_parent:"apple_iphone_ver1" %}
-				MobileOxford
-			{% else %}
-				Mobile Oxford
-			{% endif %}
-			{% endblock %}
-		</title>
+{# iPhone specific title to fit on home screen - code should perhaps be moved elsewhere? #}
+	<title>{% block title %}Mobile{% if not device|device_has_parent:"apple_iphone_ver1" %} {% endif %}Oxford{% endblock %}</title>
 	
     <meta name="viewport" content="width=device-width; user-scalable=no; maximum-scale=1; minimum-scale=1" />
 
-    {% block stylesheets %}
+{% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css"/>
-    {% endblock %}
+{% endblock %}
     
-{% if smart or desktop %}
+{% if touch or desktop %}
     <script type="text/javascript">
         require_location = {{ require_location|yesno:"true,false" }};
         site_media = "{{ MEDIA_URL }}";
@@ -27,25 +20,31 @@
     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"></script>    
     <script src="{{ MEDIA_URL }}js/gears_init.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>
-
-	{# Apple Touch device icons #}
-	{% if device|device_has_parent:"apple_iphone_ver1" %}
-		<link rel="apple-touch-icon" href="{{ MEDIA_URL}}/png/apple-touch-icon.png"/>
-		<link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}/png/apple-touch-startup-image.jpg">
-	{% endif %}
 {% endif %}
-    <!--<script src="{{ MEDIA_URL }}openlayers/OpenLayers.js" type="text/javascript"></script>
-    <script src="{{ MEDIA_URL }}openlayers/OpenLayers-osm.js" type="text/javascript"></script>-->
+
+{% if device|device_has_parent:"apple_iphone_ver1" %}
+    <link rel="apple-touch-icon" href="{{ MEDIA_URL}}/png/apple-touch-icon.png"/>
+    <link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}/png/apple-touch-startup-image.jpg">
+{% endif %}
+
+{% if touch or desktop %}
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/classes/touch.css"/>
+{% else %}
+{% if smart %}
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/classes/smart.css"/>
+{% else %}
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/classes/unsmart.css"/>
+{% endif %}    
+{% endif %}
     
-    {% for path in device_specific_media.js %}
+{% for path in device_specific_media.js %}
     <script src="{{ MEDIA_URL }}{{ path }}" type="text/javascript"></script>    
-    {% endfor %}
-    {% for path in device_specific_media.css %}
+{% endfor %}
+{% for path in device_specific_media.css %}
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}{{ path }}"/>    
-    {% endfor %}
+{% endfor %}
     
-	{# Favicon.png #}
-	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}/png/favicon.png">
+	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}/png/favicon.png"/>
 
     {% block extrahead %}{% endblock %}
     
@@ -64,7 +63,7 @@
             </a></li>
 {% endblock %}
         </ol>
-        <h1 id="page_title">{% block pagetitle %}{% endblock %}</h1>
+        <h1 id="page_title" class="{% block pagetitleclass %}{% endblock %}">{% block pagetitle %}{% endblock %}</h1>
 {% endif %}
     </div>
 {% endblock %}
@@ -73,6 +72,8 @@
     <div class="content">
 {% block content %}
 {% endblock %}
+<hr/>
+    <p>{{ dumb|yesno:"dumb," }} {{ smart|yesno:"smart," }} {{ touch|yesno:"touch," }} {{ desktop|yesno:"desktop," }}</p>
 
     </div>
   </body>
