--- a/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -37,7 +37,7 @@
     <li>{{ forloop.counter }}. <em>{{ entity_group|length }} {{ entity_type.verbose_name_plural }}</em> {{ entity.distance.km|floatformat:3 }} km {{ entity.bearing }}</li>
 {% endwith %}
 {% for entity in entity_group %}
-    <li class="subitem"><a href="{{ entity.get_absolute_url }}">{{ entity.title|linebreaksbr }}</a></li>
+    <li class="subitem{% if forloop.last %} last-subitem{% endif %}"><a href="{{ entity.get_absolute_url }}">{{ entity.title|linebreaksbr }}</a></li>
 {% endfor %}
 {% endifequal %}
 {% endfor %}
