--- a/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/contact.css"/>
 {% endblock %}
 
+{% block pagetitleclass %}contact-header with-icon{% endblock %}
 {% block pagetitle %}Contact search{% endblock %}
 
 {% block content %}
