--- a/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -1,7 +1,7 @@
 {% extends "maps/base.xhtml" %}{% load portal_misc %}
 
 {% block pagetitle %}Maps{% endblock %}
-{% block pagetitleclass %}maps-header{% endblock %}
+{% block pagetitleclass %}maps-header with-icon{% endblock %}
 
 {% block content %}
 
