Tidied up webcams

--- a/mobile_portal/mobile_portal/site-media/css/base.css
+++ b/mobile_portal/mobile_portal/site-media/css/base.css
@@ -129,6 +129,11 @@ div.submit-line {
     padding-bottom:8px;
 }
 
+div.backgrounded-image {
+    background-repeat:no-repeat;
+    background-position: center center;
+}
+
 /*
 
 div.submit-line input {
