--- a/mobile_portal/mobile_portal/templates/webcams/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/webcams/index.xhtml
@@ -1,5 +1,8 @@
 {% extends "webcams/base.xhtml" %}
 
+{% block pagetitleclass %}webcams-header with-icon{% endblock %}
+{% block pagetitle %}Webcams{% endblock %}
+
 {% block content %}
 
 
