--- a/mobile_portal/mobile_portal/templates/webcams/webcam_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/webcams/webcam_detail.xhtml
@@ -3,14 +3,20 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
-    <li><a href="{% url webcams_webcam webcam.slug %}">{{ webcam.title }}</a></li>
+            <li><a href="{% url webcams_index %}">
+                <img src="{{ MEDIA_URL }}png/webcams-bc.png" alt="Webcams"/>
+            </a></li>
 {% endblock %}
+
+{% block pagetitle %}View{% endblock %}
+
 
 {% block content %}
 
-<h1>{{ webcam.title }}</h1>
+<div class="section-nopad">
+<h2 class="section-header">{{ webcam.title }}</h1>
 
-<img class="webcam_image" src="{% external_image webcam.url %}" width="{{ device.max_image_width }}px" alt=""/>
+{% external_image webcam.url "div" %}
 
 <p>{{ webcam.description }}</p>
 
