--- a/mobile_portal/mobile_portal/site-media/css/classes/touch.css
+++ b/mobile_portal/mobile_portal/site-media/css/classes/touch.css
@@ -15,6 +15,10 @@ ul.ml li, table.section-table tr {
 	padding-right: 10px;
 }
 
+ul.ml li.non-link-item {
+	padding:10px;
+}
+
 ul.ml li.subitem {
     background-color:#103157;
     margin: auto auto auto 16px;
