--- a/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
@@ -24,7 +24,7 @@ podcasts.</p>
 
 
 {% for podcast in podcasts %}
-    <li><a href="{{ podcast.get_absolute_url }}">{{ podcast.title }}</a> ({{ podcast.medium }}
+    <li><a href="{{ podcast.get_absolute_url }}" class="{{ podcast.medium }}">{{ podcast.title }}</a> ({{ podcast.medium }})
     <br /><small>{{ podcast.description }}</small></li>
 {% endfor %}
 		</ul>
