webcam time stamp

--- a/mobile_portal/mobile_portal/templates/webcams/webcam_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/webcams/webcam_detail.xhtml
@@ -14,7 +14,7 @@
 {% block content %}
 
 <div class="section-nopad">
-<h2 class="section-header">{{ webcam.title }}</h1>
+<h2 class="section-header">{{ webcam.title }}<br /><small>{% now "G:i "%}</small></h1>
 
 {% external_image webcam.url "div" %}
 
